--- a/assets/navbar.html
+++ b/assets/navbar.html
@@ -5,6 +5,7 @@
         <a href="video.html" class="button-link">Video</a>
         <a href="audio.html" class="button-link">Audio</a>
         <a href="controls.html" class="button-link">Controls</a>
+        <a href="saves.html" class="button-link">Saves</a>
     </div>
     
 </div>
