Fixed ultralight input bug

--- a/assets/controls.html
+++ b/assets/controls.html
@@ -8,6 +8,16 @@
 <body>
     <div id="navbar-placeholder"></div>
     controls
+
+    /* input field */
+    <div class="contentWrapper" id="contentWrapper">
+        <div class="inputRow">
+            <input type="text" id="inputField" placeholder="Type here..." style="background-color: #f0f0f0; border: 1px solid #ccc; padding: 10px; width: 300px; color: rgb(0, 0, 0);">
+        </div>
+
+        <div class="buttonRow">
+            <button class="actionButton" onclick="performAction()" style="background-color: aqua; color: black; ">Action</button>
+        </div>
 </body>
 
 </html>
