Video page updates
Can now get the value from radio buttons and dropdowns

--- a/assets/navbar.html
+++ b/assets/navbar.html
@@ -6,6 +6,7 @@
         <a href="audio.html" class="button-link">Audio</a>
         <a href="controls.html" class="button-link">Controls</a>
         <a href="saves.html" class="button-link">Saves</a>
+        <a href="timer.html" class="button-link">timer</a>
     </div>
     
 </div>
